--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laminas/laminas-validator": "^2.5"
     },
     "require-dev": {
-        "phpunit/phpunit": "^11.1"
+        "phpunit/phpunit": "^11.1",
+        "squizlabs/php_codesniffer": "^3.10"
     },
     "autoload": {
         "psr-4": {
@@ -22,5 +23,10 @@
         {
             "name": "fizk"
         }
-    ]
+    ],
+    "scripts": {
+        "test": "./vendor/bin/phpunit --colors=always ./test",
+        "sniff": "./vendor/bin/phpcs --standard=PSR12 ./src ./test",
+        "fix": "./vendor/bin/phpcbf --standard=PSR12 ./src ./test"
+    }
 }
