Fixes form validation
Allows for stating if 'allowedEmpty'

 Please enter the commit message for your changes. Lines starting

--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,8 @@ composer.phar
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -226,3 +227,6 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,osx,windows,linux,composer,phpunit,phpstorm
+
+
+tmp
