--- a/composer.json
+++ b/composer.json
@@ -2,28 +2,34 @@
     "name": "fizk/library",
     "description": "A RESTfull API utility classes",
     "type": "library",
-    "require": {
-        "psr/container": "^2.0",
-        "psr/http-message": "^2.0",
-        "psr/event-dispatcher": "^1.0",
-        "laminas/laminas-filter": "^2.5",
-        "laminas/laminas-diactoros": "^3.3",
-        "laminas/laminas-validator": "^2.5"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^11.1",
-        "squizlabs/php_codesniffer": "^3.10"
-    },
-    "autoload": {
-        "psr-4": {
-            "Library\\": ["src/", "test/"]
-        }
-    },
     "authors": [
         {
             "name": "fizk"
         }
     ],
+    "require": {
+        "laminas/laminas-filter": "^2.37",
+        "laminas/laminas-validator": "2.61.x-dev",
+        "laminas/laminas-diactoros": "3.4.x-dev",
+        "psr/container": "1.x-dev",
+        "psr/http-message": "^2.0@dev",
+        "psr/event-dispatcher": "^1.0@dev"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^11.3@dev",
+        "squizlabs/php_codesniffer": "4.0.x-dev"
+    },
+    "minimum-stability": "dev",
+    "autoload": {
+        "psr-4": {
+            "Library\\": ["src/"]
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Library\\": ["test/"]
+        }
+    },
     "scripts": {
         "test": "./vendor/bin/phpunit --colors=always ./test",
         "sniff": "./vendor/bin/phpcs --standard=PSR12 ./src ./test",
