--- a/composer.json
+++ b/composer.json
@@ -14,13 +14,12 @@
         "laminas/laminas-filter": "^2.5",
         "laminas/laminas-validator": "^2.5",
         "laminas/laminas-diactoros": "^3.5",
-        "laminas/laminas-httphandlerrunner": "2.12.x-dev"
+        "laminas/laminas-httphandlerrunner": "^2.11"
     },
     "require-dev": {
-        "phpunit/phpunit": "^11.3@dev",
-        "squizlabs/php_codesniffer": "4.0.x-dev"
+        "phpunit/phpunit": "^11.5",
+        "squizlabs/php_codesniffer": "^3.11"
     },
-    "minimum-stability": "dev",
     "autoload": {
         "files": [
             "src/application.php"
