--- a/composer.json
+++ b/composer.json
@@ -11,15 +11,16 @@
         "psr/container": "^2.0",
         "psr/http-message": "^2.0",
         "psr/event-dispatcher": "^1.0",
-        "laminas/laminas-filter": "^2.5",
-        "laminas/laminas-validator": "^2.5",
-        "laminas/laminas-diactoros": "^3.5",
-        "laminas/laminas-httphandlerrunner": "^2.11"
+        "laminas/laminas-filter": "^3.1",
+        "laminas/laminas-validator": "^3.5",
+        "laminas/laminas-diactoros": "^3.7",
+        "laminas/laminas-httphandlerrunner": "^2.13"
     },
     "require-dev": {
         "phpunit/phpunit": "^11.5",
         "squizlabs/php_codesniffer": "^3.11"
     },
+    "minimum-stability": "dev",
     "autoload": {
         "files": [
             "src/application.php"
@@ -34,7 +35,7 @@
         }
     },
     "scripts": {
-        "test": "./vendor/bin/phpunit --colors=always ./test",
+        "test": "php -d xdebug.overload_var_dump=0 ./vendor/bin/phpunit --colors=always ./test",
         "sniff": "./vendor/bin/phpcs --standard=PSR12 ./src ./test",
         "fix": "./vendor/bin/phpcbf --standard=PSR12 ./src ./test"
     }
